--- a/MDK-ARM/can_test/can_test.build_log.htm
+++ b/MDK-ARM/can_test/can_test.build_log.htm
@@ -22,19 +22,70 @@ Dialog DLL:      TCM.DLL V1.14.8.0
  
 <h2>Project:</h2>
 I:\Keil Project\can_test1\MDK-ARM\can_test.uvprojx
-Project File Date:  07/26/2021
+Project File Date:  07/28/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'D:\Program Files\Keil_v5\ARM\ARMCC\Bin'
-Build target 'can_test'
+Rebuild target 'can_test'
+assembling startup_stm32f103xb.s...
+compiling freertos.c...
+compiling tim.c...
+compiling stm32f1xx_it.c...
+compiling usart.c...
+../Core/Src/usart.c(209): warning:  #940-D: missing return statement at end of non-void function "fputc"
+   }
+../Core/Src/usart.c: 1 warning, 0 errors
+compiling gpio.c...
 compiling can.c...
-../Core/Src/can.c(191): warning:  #223-D: function "strcpy" declared implicitly
-   		 strcpy(TxData,data,8);
-../Core/Src/can.c(204): warning:  #223-D: function "printf" declared implicitly
-  		printf("?????ý¾?Îª");
-../Core/Src/can.c: 2 warnings, 0 errors
+compiling main.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_can.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_flash.c...
+compiling mbascii.c...
+compiling mbfunccoils.c...
+compiling mbfuncdiag.c...
+compiling stm32f1xx_hal_tim.c...
+compiling mbfuncdisc.c...
+compiling mbfuncholding.c...
+compiling mbfuncinput.c...
+compiling mbfuncother.c...
+compiling mbutils.c...
+compiling mbcrc.c...
+compiling mbrtu.c...
+..\HardWare\STModBus\modbus\rtu\mbrtu.c(152): warning:  #550-D: variable "xFrameReceived" was set but never used
+      BOOL  xFrameReceived = FALSE;
+..\HardWare\STModBus\modbus\rtu\mbrtu.c: 1 warning, 0 errors
+compiling mbtcp.c...
+compiling portevent.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_uart.c...
+compiling croutine.c...
+compiling event_groups.c...
+compiling list.c...
+compiling queue.c...
+compiling stream_buffer.c...
+compiling tasks.c...
+compiling timers.c...
+compiling heap_4.c...
+compiling mb.c...
+compiling cmsis_os2.c...
+compiling port.c...
+compiling portserial.c...
+compiling porttimer.c...
+compiling demo.c...
 linking...
-Program Size: Code=17848 RO-data=1072 RW-data=416 ZI-data=12104  
+Program Size: Code=17840 RO-data=1072 RW-data=1428 ZI-data=8076  
 FromELF: creating hex file...
 "can_test\can_test.axf" - 0 Error(s), 2 Warning(s).
 
@@ -59,7 +110,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:14
 </pre>
 </body>
 </html>
